--- a/LOCAL_VERSION/requirements.txt
+++ b/LOCAL_VERSION/requirements.txt
@@ -5,9 +5,9 @@ importlib-metadata==4.6.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-numpy>=1.20.0
-pandas==1.1.5
-psycopg2==2.9.1
+pandas~=1.1.5 
+numpy~=1.17.0 
+psycopg2~=2.8.5 
 psycopg2-binary==2.9.1
 python-dateutil==2.8.2
 pytz==2021.1
